# trik-lobe-server

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  FOR_REVIEW.md  MODERNIZATION.md  README.md  TRIKLobeServer.py  pyproject.toml  requirements.txt  settings.ini
.github/: dependabot.yml
.github/workflows/: python-app.yml
lobe_server/: __init__.py  camera.py  config.py  model.py  protocol.py  server.py
tests/: conftest.py  test_camera.py  test_config.py  test_model.py  test_protocol.py  test_server.py
