[project]
name = "trik-lobe-server"
version = "1.1.0"
description = "TRIK Lobe ML inference server"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.11.0,<5.0.0",
    "requests>=2.32.0,<3.0.0",
    "Pillow>=11.0.0,<12.0.0",
    "numpy>=1.26.0,<2.0.0",
]


[dependency-groups]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "pytest-cov>=5.0,<7.0",
    "pylint>=3.0,<4.0",
    "basedpyright>=1.0,<2.0",
    "pyinstaller>=6.0,<7.0",
    "ruff>=0.15.0,<1.0.0",
    "mdformat>=1.0.0,<2.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["lobe_server"]

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "W", "SIM"]
ignore = ["N802", "N803", "N806", "N815", "N816"]

[tool.pylint.'MESSAGES CONTROL']
disable = ["C0114", "C0115", "C0116", "R0903"]

[tool.basedpyright]
typeCheckingMode = "strict"
