[project]
name = "trik-lobe-server"
version = "1.1.0"
description = "TRIK Lobe ML inference server"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.11.0,<5.0.0",
    "requests>=2.32.0,<3.0.0",
    "Pillow>=11.0.0,<12.0.0",
    "numpy>=1.26.0,<2.0.0",
    "onnxruntime>=1.17.0,<2.0.0",
    "ai-edge-litert>=2.1.0",
]


[dependency-groups]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "pytest-cov>=5.0,<7.0",
    "pylint>=3.0,<4.0",
    "basedpyright>=1.0,<2.0",
    "pyinstaller>=6.0,<7.0",
    "ruff>=0.15.0,<1.0.0",
    "mdformat>=1.0.0,<2.0.0",
    "bandit>=1.8.0,<2.0.0",
    "vulture>=2.14,<3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["lobe_server"]

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "W", "SIM", "PLE", "PLW", "PT", "T10", "TRY", "EM", "RUF", "NPY", "RET"]
ignore = ["N802", "N803", "N806", "N815", "N816"]

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "C0114", "C0115", "C0116", "R0903",
    "W0718",  # broad-exception-caught — intentional for reconnect loop
    "R0902",  # too-many-instance-attributes — Settings has 9 fields
    "W0212",  # protected-access — tests need this
    "W0621",  # redefined-outer-name — pytest fixture pattern
    "E0110",  # abstract-class-instantiated — intentional test
    "E1101",  # no-member — cv2 C extension
    "C0103",  # invalid-name — TRIKLobeServer entry point name
    "C0301",  # line-too-long — ruff format handles this at 120
    "C0415",  # import-outside-toplevel — cv2 lazy import
]
extension-pkg-allow-list = ["cv2", "onnxruntime", "ai_edge_litert"]

[tool.pylint.MASTER]
ignore = [".venv"]

[tool.pylint.SIMILARITIES]
min-similarity-lines = 4
ignore-comments = true
ignore-docstrings = true
ignore-imports = true
ignore-signatures = true

[tool.basedpyright]
typeCheckingMode = "strict"
reportPrivateUsage = "none"
reportPossiblyUnboundVariable = "error"
reportMissingTypeStubs = "none"
reportMissingImports = "none"
reportUnknownMemberType = "none"
reportAttributeAccessIssue = "none"
reportUnknownLambdaType = "none"
reportMissingTypeArgument = "none"
reportUnknownVariableType = "none"
reportUnknownParameterType = "none"
reportUnknownArgumentType = "none"

[tool.vulture]
ignore_names = ["return_value", "side_effect", "prediction", "im", "settings", "mock_model", "mock_camera"]
